--- a/jobs.css
+++ b/jobs.css
@@ -32,25 +32,29 @@ h2{
 .first{
 background-color: orange;
 flex:2;
-height: 100px;
+height: 120px;
 }
 
 .sec{
 	background-color:grey;
 	flex: 2;
-	height: 100px;
+	height: 120px;
 }
 
 h3{
-	font-size: 25px;
-	padding: 20px;
+	font-size: 20px;
+	padding: 10px;
+	color: white;
+	
 	
 }
 .sec h4{
 
-	padding: 20px;
-	font-size: 25px;
-	margin: 
+	padding: 10px;
+	font-size: 20px;
+	color: white;
+	height: 70px;
+	
 }
 h5{
 	font-size: 25px;
