--- a/mybio.css
+++ b/mybio.css
@@ -20,9 +20,7 @@ background-position: right;
 h2{
 	
 	padding: 10px;
-	width:1490px;
 	text-shadow:1px 1px;
-
 }
 h3{
 	text-align: center;padding: 20px;background-color: black;
@@ -42,7 +40,7 @@ h4{
 	padding: 20px;
 	background-color: black;
 	opacity: 0.5;font-size: 20px;
-	color: grey;
+	color: white;
 	width: 50%;
 }
 .sec{
