--- a/reviews.css
+++ b/reviews.css
@@ -31,7 +31,7 @@ background-position: right;/*we have added a image for seacrh icon*/
 	background-color: grey;
 	width: 900px;
 	padding: 10px;
-	font-size: 25px;
+	font-size: px;
 	border-radius: 20px 35px 45px 20px;
 	height: 70px;
 	opacity: 0.6;
@@ -39,7 +39,7 @@ background-position: right;/*we have added a image for seacrh icon*/
 .sec{
 
 	background-color: orange;
-	font-size: 25px;
+	font-size: 35px;
 	width: 1200px;
 	padding: 10px 0 0 20px;
 	margin: 25px;
@@ -56,7 +56,7 @@ h5{
 	padding: 10px;
 	background-color: tomato;
 	width: 1400px;margin: 50px;
-	height: 150px;
+	height: 150px; font-size: 30px;
 	border-radius: 20px 35px 45px 20px;
 	
 }
