--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body{
+	overflow-x: hidden;
+}
+
 *{
 	margin: 0;padding: 0;
 }
@@ -127,5 +131,12 @@ h4{
 	height:20px;
 	margin:0px;
 
+}
+@media screen and (max-width: 600px){
+	
+	 a{ flex-direction: column; width: 100%; }
+	div{flex-direction: column;}
+	
+	h1 {flex-direction: column; width: 100%;}
 }
 
