--- a/glossary.css
+++ b/glossary.css
@@ -1,4 +1,4 @@
-*{
+*{/*determine whole body and spaces*/
 	margin: 0;padding: 0;
 }
 a{
@@ -21,21 +21,20 @@ a{
 	list-style: none;/*displaying flex to our unorder list*/
 	display: flex;	
 }
-.first ul li{
+.first ul li{/* the positin to make it fix with text aligning center*/
 	position: relative;width:98%;
 	text-align:center; 
 	font size:25px;
 } 
-.first li:hover .menu li{
+.first li:hover .menu li{/*displaying block to the list and giving it the hover effect to touch the element*/ 
 	display: block; 
 }
-.menu li{
+.menu li{/*displaying none so that only on the click the display can be done*/
 	display: none;
 
 }
 
-}
-.menu ul{   
+.menu ul{   /*giving flex to the menu class for row display*/
 	display: flex;
 	flex-direction: column;
 	width:90%;	
@@ -84,16 +83,16 @@ border-radius:20px 30px 30px 20px;
 opacity: 0.6;
 font-size:25px;
 }
-.sec{
+.sec{/*flex property for the given images*/
 	display: flex;
 }
-h4{
+h4{/*header with border bottom and some width,padding*/
 	
 padding: 10px;
 border-bottom: 3px solid black;
 width: 900px;
 }
-@media screen and (max-width: 600px){
+@media screen and (max-width: 600px){/*to make the screen responsive*/
 	
 	 a{ flex-direction: column; width: 100%; }
 	div{flex-direction: column;}
@@ -103,6 +102,6 @@ width: 900px;
 	h4{width: 30%;}
 	p{width: 80%;font-size: 10px}
 }
-body{
+body{/*this is to avoid overflow while making it responsive*/
 	overflow-x: hidden;
 }
