--- a/jobs.css
+++ b/jobs.css
@@ -1,22 +1,22 @@
 h1{
  	background-color: white;padding: 10px;text-shadow: 1px 1px;display:flex;width:1499px;
- 	font-size: 25px;
+ 	font-size: 25px;/* the header given flex as to disply title and input box and logo to x axis*/
 }
-.search {
+.search {/*input box fo the search box*/
 	padding:0 0 0 100px;
 }
-.search input{
+.search input{/* image of search logo*/
 	font-size: 25px;background-image: url(logo.png);background-repeat: no-repeat;
 background-position: right;
 }
-body{
+body{/*adding up image to the body and transition added whileloading page*/
 	font-family: sans-serif;
 	background-color:lightgrey;
 	background-image: url(paper.jpg);background-size: cover;
 	transition:all 0.5s linear 1s ;
 	
 }
-*{
+*{/*determine whole body and spaces*/
 	margin: 0;padding: 0;
 }
 a{
@@ -39,21 +39,22 @@ a{
 	list-style: none;/*displaying flex to our unorder list*/
 	display: flex;	
 }
-.first ul li{
+.first ul li{/* the positin to make it fix with text aligning center*/
 	position: relative;width:98%;
 	text-align:center; 
 	font size:25px;
 } 
-.first li:hover .menu li{
+.first li:hover .menu li{/*displaying block to the list and giving it the hover effect to touch the element*/ 
+
 	display: block; 
 }
-.menu li{
+.menu li{/*displaying none so that only on the click the display can be done*/
 	display: none;
 
 }
 
 }
-.menu ul{   
+.menu ul{   /*giving flex to the menu class for row display*/
 	display: flex;
 	flex-direction: column;
 	width:90%;
@@ -61,37 +62,37 @@ a{
 
 
 
-h2{
+h2{/* header for the job comparision*/
 	padding: 10px;background-color: black;
 	color: white;height: 50px;text-align: center;
 	
-	opacity: .6;
+	opacity: .6;/*to show the transparency*/ 
 }
-.container{
+.container{/*displaying flex to the container so that h3 and h4 be side by side*/
 	display: flex;
 
 }
 
-.fir{
+.fir{/* the orange background and flex 2 so that half of the screen can be divided*/
 background-color: orange;
 flex:2;
 height: 120px;
 }
 
-.sec{
+.sec{/*class sec for h4 and also flex to get half of the screen*/
 	background-color:grey;
 	flex: 2;
 	height: 120px;
 }
 
-h3{
+h3{/* added some property for the written element*/
 	font-size: 20px;
 	padding: 10px;
 	color: white;
 	
 	
 }
-.sec h4{
+.sec h4{/*properties for the written element*/
 
 	padding: 10px;
 	font-size: 20px;
@@ -106,23 +107,23 @@ h5{
 	width: 300px;
 	color: white;
 	padding: 20px;
-	transition:all 0.5s linear 0.5s ;
+	transition:all 0.5s linear 0.5s ;/* the changable property with 0.5 duration*/ 
 }
-h5:hover{
+h5:hover{/*hover effect over the heading which show change in touch propert*/
 	background-color: white;color: black;
 	box-shadow:8px 8px 8px 8px;
 }
-.third{
+.third{/*the form added up with given properties*/
 margin: 25px;
 color: white;
 font-size: 25px;
 
 }
-footer{
+footer{/*for the end blackground color loaded with black*/
 background-color:black;
 height: 52px;
 }
-@media screen and (max-width: 600px){
+@media screen and (max-width: 600px){/*to make the screen responsive*/
 	
 	 a{ flex-direction: column; width: 100%; }
 	div{flex-direction: column;}
@@ -130,6 +131,6 @@ height: 52px;
 	.sec h4{flex-direction: column;width: 100%;font-size: 15px;padding: 2px;}
 	h1 {flex-direction: column; width: 100%;}
 }
-body{
+body{/*to avoid the slide bar to the x axis during responsiveness*/
 	overflow-x: hidden;
 }
