--- a/reviews.css
+++ b/reviews.css
@@ -126,3 +126,15 @@ body/*to control the overflow at x drection*/
 {
 overflow-x: hidden;	
 }
+.media section{
+	display: flex;
+}
+.link{
+	height: 50px;padding: 0;
+
+}
+footer{
+	background-color: black;
+	height: 35px;
+	width: 100%;
+}
