--- a/style.css
+++ b/style.css
@@ -114,26 +114,8 @@ h4{
 	width:100%;
 	line-height: 40px;
 }
-.end{/*conatin terms and condition with  transparency*/
-	text-align: center;
 
-	background-color: black;
-	margin:7px 20px 0 0px;
-	line-height: 50px;
-	padding: 20px 0px 0px 0px;
-	color: white;
-	width:100%;
-	height: 90px;
-	opacity: 0.8;
-}
-.ending {/*TO display the border black line*/
-	background-color: black;
-	
-	width: 100%;
-	height:20px;
-	margin:0px;
 
-}
 @media screen and (max-width: 600px){/*to make the screen responsive*/
 	
 	 a{ flex-direction: column; width: 100%; }
@@ -141,4 +123,11 @@ h4{
 	
 	h1 {flex-direction: column; width: 100%;}
 }
+.media section{/*for the social media links*/
+	display: flex;
+}
+.link{
+	height: 50px;padding: 0;
+	
 
+}
