--- a/mybio.css
+++ b/mybio.css
@@ -1,6 +1,6 @@
 body{
-	background-image: url(123.jpg);width: 100%;
-	height: 100%;
+	background-image: url(bio1.jpg);
+	background-size: cover;
 	font-family:sans-serif;
 
 	
